# stock_control

./: Dockerfile  db.sqlite3  pyproject.toml
control_stock/: db.sqlite3
control_stock/control_stock/: asgi.py  settings.py  urls.py  wsgi.py
control_stock/stock/: serializers.py
control_stock/stock/migrations/: 0004_sale_product.py  0005_rename_buy_price_sale_sell_price.py
stock/: SQLite.sql  models.py  views.py
stock/migrations/: 0001_initial.py  0002_alter_product_id.py  0003_sale_alter_product_id.py
